fixed stretching on certain project images

--- a/projects.css
+++ b/projects.css
@@ -19,6 +19,7 @@
     height: 150px;
     padding: 10px;
     border-radius: 15px;
+    object-fit: cover;
 }
 
 .project-header {
